force-app/main/default/objects/cgcloud__Route_Template__c/cgcloud__Route_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the route template object, to be used for routes.</description>
    <label>Route Template</label>
    <nameField>
        <label>Route Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>