force-app/main/default/objects/cgcloud__Route_Template__c/fields/cgcloud__Tour_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tour_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the tour template object.</description>
    <label>Tour Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Tour_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Tour_Template__c</referenceTo>
    <relationshipLabel>Route Templates</relationshipLabel>
    <relationshipName>Route_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>