force-app/main/default/objects/cgcloud__Route_Template__c/fields/cgcloud__Visit_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Template</label>
    <referenceTo>cgcloud__Visit_Template__c</referenceTo>
    <relationshipLabel>Route Templates</relationshipLabel>
    <relationshipName>Route_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>