force-app/main/default/objects/cgcloud__Route_Template__c/validationRules/cgcloud__Sales_Org_should_be_same_for_all_lookups.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same_for_all_lookups</fullName>
    <active>true</active>
    <description>The Visit Template, the Tour Template and the Route Template must have the same Sales Org.</description>
    <errorConditionFormula>TEXT( cgcloud__Sales_Org__c)  &lt;&gt; TEXT( cgcloud__Visit_Template__r.cgcloud__Sales_Org__c)  || TEXT(cgcloud__Sales_Org__c) &lt;&gt;  TEXT(cgcloud__Tour_Template__r.cgcloud__Sales_Org__c)  || TEXT(cgcloud__Visit_Template__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT(cgcloud__Tour_Template__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Visit Template, the Tour Template and the Route Template must have the same Sales Org.</errorMessage>
</ValidationRule>